Add --enable-native-access to run